@startuml
title 集約を表すクラス図

class User {
  - userID: UserID
  - userName: UserName
  + ChangeName(userName UserName) error
}
note right
* 集約ルートオブジェクト
* 集約境界内オブジェクトの操作は、Userオブジェクトを通してのみ行う
endnote

class UserID {
  - value: string
}
note bottom
集約境界内オブジェクト
endnote

class UserName {
  - value: string
}
note bottom
集約境界内オブジェクト
endnote

User *-- UserID: コンポジション
User *-- UserName: コンポジション
@enduml
